2000-07-20  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/JCMT.pm (findfilters): Determine the FILT_N name correctly
	from the FILTER name (ie 850W from 850W:450W)

	* Display.pm (parse_file_defn): Force case insensitive id match
	(was doing half the job before and fialing to match _I)

2000-06-14  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm: Use Starlink::Versions

2000-05-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/GAIA.pm (new): Add use_remote_gaia and special case kauwa 
	(launch): _launch_new_gaia and _open_gaia_socket are now methods
	(the latter now requires the object state)

2000-05-10  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/GAIA.pm (send_to_gaia): Rewrite to be a lot cleaner code 
	(sorry Casey).
	(image): Relaunch GAIA if required. Create new clones if required.

2000-05-09  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/IRCAM2.pm (template): Zero pad numbers
	

2000-05-06  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* Frame/IRCAM2.pm: Add

2000-05-04  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/CGS4.pm: Add rows to the calibration object 

2000-05-03  Tim Jenness  <timj@jach.hawaii.edu>

	* Index.pm (verify): Return immediately if name is not defined. 

2000-05-02  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm (orac_store_frm_in_correct_grp): Remove spurious unlink
	and ensure that the group file name uses the group name if the group
	name is a number.

2000-05-01  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/CGS4.pm (file_from_bits): Zero pad filename
	(flag_from_bits): Remove suffix from raw name

2000-04-27  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/CGS4.pm (findrecipe): Protect against -w

2000-04-26  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib.pm (standard): More helpful error message

2000-04-22  Tim Jenness  <timj@jach.hawaii.edu>

	* Msg/ADAM/Task.pm: Use &Starlink::ADAM::DTASK__ACTCOMPLETE

	* Inst/IRCAM.pm (start_msg_sys):  Add support for 'preserve' flag.
	