@@ -1,3 +1,7 @@
+2000-07-21  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Calib/SCUBA.pm: Add support for BEAM and ARCSEC units in gain determination. 
+
 2000-07-20  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Frame/JCMT.pm (findfilters): Determine the FILT_N name correctly
